# toyproject

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  edit.bat  output_font.tga  platform.mk  reflect.sh
assets/: bomb.tga  button.tga  chest.tga  explosion.tga  font_frag.glsl  map0.txt  player2.tga  wall.tga
assets/Fonts/: consola.ttf_sdf.tga  consola.ttf_sdf.txt  consolas_32.fnt  output_font.tga  tf2.tga  tf2desc.txt
assets/shaders/: font_frag.frag  frag.frag  vert.vert
src/: CMakeLists.txt  alloc.c  alloc.h  alloc_tests.c  alloc_tests.h  common.c  common.h  draw_system.c  editor.c  editor.h  entity.c  grid.c  grid.h  main.c  math.c  math.h  math_tests.c  reflect.c  reflect.h  reflect_impl.c  reflect_local.h  reflect_parser.c  reflect_parser.flex  reflect_parser.h  renderer.c  renderer.h  shared_game.c  shared_game.h
src/common/: reflect.h  unit_tests.h
src/game/: CMakeLists.txt  alloc.c  alloc.h  alloc_tests.c  app_states.c  app_states.h  as_editor.c  as_game.c  as_menu.c  assets.c  assets.h  bomb_system.c  camera_system.c  chest_system.c  common.c  common.h  draw_system.c  editor.c  entity.h  explosion_system.c  font.c  font.h  font_baker.c  font_baker.h  font_renderer.c  font_renderer.h  font_tests.c  game.c  game.h  game.mk  grid.c  grid.h  json.c  json_common.c  json_common.h  json_reader.c  json_reader.h  json_reader_tests.c  json_reader_tests.h  json_tests.c  (+34 more)
src/macos_client/macos_client/: AppDelegate.h  AppDelegate.m  GameView.h  GameView.m  GameViewController.h  GameViewController.m  Info.plist  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  main.m
src/macos_client/macos_client.xcodeproj/: project.pbxproj
src/macos_client/macos_client.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/macos_client/macos_client.xcodeproj/xcshareddata/xcschemes/: macos_client.xcscheme
src/macos_client/macos_client/Base.lproj/: Main.storyboard
src/platform/: CMakeLists.txt  platform.c  platform.h
src/reflect/: CMakeLists.txt  reflect.mk  reflect_local.h  reflect_parser.c  reflect_parser.flex  term.h
src/universal/: CMakeLists.txt  app_event.h  cmdline.c  cmdline.h  game_api.h  graphics.h  host.c  host.h  strsplit.c  strsplit_tests.c  unit_tests.h  universal.h  vertex.h
